--- a/Chenyuan.Lottery/Chenyuan.Lottery.Web/packages.config
+++ b/Chenyuan.Lottery/Chenyuan.Lottery.Web/packages.config
@@ -5,6 +5,8 @@
   <package id="Autofac.Mvc5" version="4.0.2" targetFramework="net462" />
   <package id="Autofac.WebApi" version="3.1.0" targetFramework="net462" />
   <package id="bootstrap" version="3.3.7" targetFramework="net462" />
+  <package id="EntityFramework" version="6.2.0" targetFramework="net462" />
+  <package id="EntityFramework.zh-Hans" version="6.2.0" targetFramework="net462" />
   <package id="jQuery" version="3.2.1" targetFramework="net462" />
   <package id="jQuery.Validation" version="1.16.0" targetFramework="net462" />
   <package id="Microsoft.ApplicationInsights" version="2.4.0" targetFramework="net462" />
