--- a/Chenyuan.Lottery/Chenyuan.Lottery.Web/Chenyuan.Lottery.Web.csproj
+++ b/Chenyuan.Lottery/Chenyuan.Lottery.Web/Chenyuan.Lottery.Web.csproj
@@ -188,7 +188,7 @@
     <Compile Include="WebCore\WorkContext.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="App_Data\Chenyuan-BaseSettings.txt.txt" />
+    <Content Include="App_Data\Chenyuan-BaseSettings.txt" />
     <Content Include="Content\bootstrap-theme.css" />
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
